# Epistle

./: .gitignore  Cargo.toml  Makefile  README.md  io.github.justinf555.Epistle.json  meson.build
architecture/: backend_architecture.md  compose_send_pipeline.md  email_processing_pipeline.md  gnome_mail_architecture.md  goa_integration.md  high-level-arch.drawio  imap_sync_engine.md  message-pipeline-jf.drawio  message-pipeline.drawio  ui_components.md  v1_scope.md
data/: io.github.justinf555.Epistle.desktop.in  io.github.justinf555.Epistle.gschema.xml  io.github.justinf555.Epistle.metainfo.xml.in  io.github.justinf555.Epistle.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: app_event.rs  application.rs  commands.rs  config.rs  engine.rs  epistle.gresource.xml  event_bus.rs  events.rs  goa.rs  lib.rs  main.rs  meson.build  shortcuts-dialog.blp  sync.rs  threading.rs  traits.rs  ui.rs  window.rs
src/engine/: accounts.rs  body_store.rs  calendar.rs  compose.rs  contacts.rs  db.rs  folders.rs  messages.rs  pipeline.rs  search.rs  send.rs  store.rs  traits.rs
src/engine/db/: accounts.rs  folders.rs  messages.rs
src/engine/db/migrations/: 001_create_accounts.sql  002_create_folders.sql  003_add_accounts_content_hash.sql  004_add_folders_content_hash.sql  005_create_messages.sql  006_add_message_body.sql  007_add_internal_date.sql
src/engine/pipeline/: detect_content_type.rs  extract_body_structure.rs  extract_flags.rs  extract_metadata.rs  extract_preview.rs  helpers.rs  parse_body.rs  sanitise.rs  types.rs
src/engine/traits/: accounts.rs  folders.rs  messages.rs
src/goa/: proxies.rs  types.rs
src/sync/: body_worker.rs  idle.rs  imap.rs  inbound.rs  outbound.rs  pool.rs  service.rs
src/threading/: algorithm.rs  normalise.rs
src/traits/: accounts.rs  calendar.rs  compose.rs  contacts.rs  search.rs  send.rs  store.rs
src/ui/: message_list.rs  message_view.rs  sidebar.rs  window.blp  window.rs  window.ui
src/ui/message_list/: factory.rs  folder_cache.rs  item.rs  message_list.blp  message_list.rs  row.blp  row.rs
src/ui/message_view/: message_view.blp  message_view.rs
src/ui/sidebar/: sidebar.blp  sidebar.rs
src/ui/window/: window.blp  window.rs
tests/: goa_integration.rs
