[package]
name = "epistle"
version = "0.1.0"
edition = "2021"

[dependencies]
# GTK / GNOME
gtk = { version = "0.11.2", package = "gtk4", features = ["gnome_50"] }
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_9"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }

# D-Bus
zbus = "5"

# IMAP
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Hashing
sha2 = "0.10"

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tempfile = "3"
